--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt .
+# Use repo-relative paths so Render's build context (root of repo) works reliably
+COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY ./app ./app
+COPY backend/app ./app
 ENV PYTHONPATH=/app
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
