changes in CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Run tests
         working-directory: backend
         run: |
-          pytest -q
+          PYTHONPATH=. pytest -q
 
